Fix Nav gap

--- a/css.css
+++ b/css.css
@@ -14,7 +14,7 @@ body::after{
   src: url('March Shine.otf');
 }
 
-/* --------------------------------------------------------------------------- */
+/* ------------------------------ CUSTOM ------------------------------ */
 .img-res{
   width: 100%;
   height: auto;
@@ -69,7 +69,8 @@ nav>div>a:hover{
 #MenuExpander{
   float: right;
   display: none;
-  margin: 12px;
+  height: 50px;
+  width: 50px;
   font-size: 25px;
   background-color: transparent;
   border: none;
@@ -105,7 +106,6 @@ nav>div>a:hover{
     background: rgba(255,255,255,.35);
     display: block;
     overflow: hidden;
-    margin-top: -3px;
   }
 
   .rightMenu>a{
@@ -158,7 +158,21 @@ nav>div>a:hover{
   position: relative;
 }
 
-/* CAROUSEL */
+/* ------------------------------ CAROUSEL ------------------------------ */
+/* Carousel Slides */
+.mySlides:nth-child(1) {
+  background-image: url('img/IMG_20181228_145311.jpg');
+}
+.mySlides:nth-child(2) {
+  background-image: url('img/DSC_0293.jpg');
+}
+.mySlides:nth-child(3) {
+  background-image: url('img/PXL_20230128_213922520.jpg');
+}
+.mySlides:nth-child(4) {
+  background-image: url('img/71697800_2682165338506904_3717268502193635328_n.jpg');
+}
+
 .mySlides {display: none}
 img {vertical-align: middle;}
 
@@ -276,18 +290,4 @@ img {vertical-align: middle;}
   background-size: cover;
   background-position: center center;
   height: 100%;
-}
-
-/* Carousel Slides */
-.mySlides:nth-child(1) {
-  background-image: url('img/IMG_20181228_145311.jpg');
-}
-.mySlides:nth-child(2) {
-  background-image: url('img/DSC_0293.jpg');
-}
-.mySlides:nth-child(3) {
-  background-image: url('img/PXL_20230128_213922520.jpg');
-}
-.mySlides:nth-child(4) {
-  background-image: url('img/71697800_2682165338506904_3717268502193635328_n.jpg');
 }
